Create number better

--- a/numeri.html
+++ b/numeri.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-  <form method="POST" action="index.php">
+  <form method="POST" action="calcola.php">
 
     <input type="number" name="n1" >
     <input type="number" name="n2" >
