--- a/registrazione.html
+++ b/registrazione.html
@@ -6,8 +6,8 @@
 
   <body>
     <div class="signup">
-      <form action="signup.php" method="post">
-        <input name="user" type="text" placeholder="username" />
+      <form action="registrazione.php" method="post">
+        <input name="username" type="text" placeholder="username" />
         <input name="password" type="password" placeholder="password" />
         <input name="confermapassword" type="password" placeholder="conferma password" />
         <input name="nome" type="text" placeholder="nome" />
