--- a/numeri.html
+++ b/numeri.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Gioca i numeri!!</title>
-  </head>
-  <body>
-
-  <form method="POST" action="calcola.php">
+  <form method="POST" action="calcola.php" id="NumeriForm">
 
     <input type="number" name="n1" >
     <input type="number" name="n2" >
@@ -17,6 +9,3 @@
     <input type="submit" >
 
   </form>
-
-  </body>
-</html>
